src/styles/TimePicker.css
.time-grid{
    display: grid;
    grid-template-rows: repeat(6, 1fr);
    grid-auto-flow: column;
    align-items: center;
    padding-left: 2px;
}

.time-grid-close{
    display: none;
    grid-template-rows: repeat(6, 1fr);
    grid-auto-flow: column;
    align-items: center;
    padding-left: 2px;
}
.openButton-open{
    display: block;
	margin: 0 auto;
	padding: 0;
	width: 95vw;
	height: 30.25px;
	border: 2px solid cornflowerblue;
	border-radius: 2px;
	background-color:white;
	color: cornflowerblue;
	letter-spacing: 1px;
	font-size: 18px;
    margin: 10px;
	-webkit-transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
	transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
}

.openButton-close:hover{
	cursor: pointer;
	background-color: rgb(185, 209, 255);
	/* color: white; */
	/* font-weight: bolder; */
}

.openButton-close{
    display: block;
	margin: 0 auto;
	padding: 0;
	width: 95vw;
	height: 30.25px;
	border: 2px solid cornflowerblue;
	border-radius: 2px;
	background-color:cornflowerblue;
	color: white;
	letter-spacing: 1px;
	font-size: 18px;
    margin: 10px;
	-webkit-transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
	transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
}

.openButton-open:hover{
	cursor: pointer;
	background-color: rgb(185, 209, 255);
	color: white;
}

.dropdown{
    align-items: center;
	justify-content: center;
	display: flex;
}

.dropdownBlock {
	display: block;
}

.marginAuto {
	margin: 0 auto;
}

